Dapp Change for WL2

--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -53,8 +53,10 @@
     "proof": "hardhat generate-proof",
     "deploy": "hardhat run scripts/1_deploy.ts",
     "verify": "hardhat verify --constructor-args config/ContractArguments.ts",
-    "whitelist-open": "hardhat run scripts/2_whitelist_open.ts",
-    "whitelist-close": "hardhat run scripts/3_whitelist_close.ts",
+    "whitelist1-open": "hardhat run scripts/2_whitelist1_open.ts",
+    "whitelist2-open": "hardhat run scripts/2_whitelist2_open.ts",
+    "whitelist1-close": "hardhat run scripts/3_whitelist1_close.ts",
+    "whitelist2-close": "hardhat run scripts/3_whitelist2_close.ts",
     "presale-open": "hardhat run scripts/4_presale_open.ts",
     "presale-close": "hardhat run scripts/5_presale_close.ts",
     "public-sale-open": "hardhat run scripts/6_public_sale_open.ts",
